# Frontier.Engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Frontier.Engine.vcxproj  Frontier.Engine.vcxproj.filters  Frontier.sln  README.md
Source/: CMakeLists.txt  Engine.cpp  Engine.h  FTArray.h  FTCircularBuffer.h  FTDictionary.h  FTDictionaryUtil.h  FTEngine.cpp  FTEngine.h  FTIndexedArray.h  FTObject.h  FTString.h  Frontier.h
Source/Event/: CMakeLists.txt  Event.h  EventDispatcher.h  EventHelpers.h  EventManager.cpp  EventManager.h  FTEvent.h  FTEventDispatcher.h  FTEventHelpers.h  FTEventManager.cpp  FTEventManager.h
Source/Event/Engine/: CMakeLists.txt  EngineEventDispatcher.h  FTEngineEventDispatcher.h  FTEngineEvents.h
Source/Event/Input/: CMakeLists.txt  FTInputManager.cpp  FTInputManager.h  FTKeyMapping.cpp  FTKeyMapping.h  FTKeyboardDelegate.cpp  FTKeyboardDelegate.h  FTMouseDelegate.cpp  FTMouseDelegate.h  InputManager.cpp  InputManager.h  KeyMapping.cpp  KeyMapping.h  KeyboardDelegate.cpp  KeyboardDelegate.h  MouseDelegate.cpp  MouseDelegate.h
Source/Event/Keyboard/: CMakeLists.txt  FTKeyboardEventDispatcher.cpp  FTKeyboardEventDispatcher.h  FTKeyboardEvents.h  KeyboardEventDispatcher.cpp  KeyboardEventDispatcher.h  KeyboardEvents.h
Source/Event/Mouse/: CMakeLists.txt  FTMouseEventDispatcher.cpp  FTMouseEventDispatcher.h  FTMouseEvents.h  MouseEventDispatcher.cpp  MouseEventDispatcher.h  MouseEvents.h
Source/Event/Window/: CMakeLists.txt  FTWindowEventDispatcher.cpp  FTWindowEventDispatcher.h  FTWindowEvents.h  WindowEventDispatcher.cpp  WindowEventDispatcher.h  WindowEvents.h
Source/IO/: CMakeLists.txt  FileManager.cpp
Source/IO/Serialization/: CMakeLists.txt  TTag.h  TagID.h
Source/Rendering/: Button.cpp  Button.h  CMakeLists.txt  Director.cpp  Director.h  Drawable.h  DrawableNode.h  FTButton.cpp  FTButton.h  FTButton2D.cpp  FTButton2D.h  FTDirector.cpp  FTDirector.h  FTDrawable.h  FTDrawableNode.h  FTLayoutNode.h  FTNode.cpp  FTNode.h  FTScene.h  FTShaderNode.cpp  FTShaderNode.h  FTView.cpp  FTView.h  FTWindowSizeNode.h  LayoutNode.h  Node.cpp  Node.h  Scene.h  ShaderNode.cpp  ShaderNode.h  View.h  WindowSizeNode.h
Source/Rendering/Action/: Action.h  ActionManager.cpp  ActionManager.h  ActionSequence.cpp  ActionSequence.h  CMakeLists.txt  CallDelegateAction.h  CallFuncAction.cpp  CallFuncAction.h  FTAction.h  FTActionManager.cpp  FTActionManager.h  FTActionSequence.cpp  FTActionSequence.h  FTCallDelegateAction.h  FTCallFuncAction.cpp  FTCallFuncAction.h  FTIntervalAction.cpp  FTIntervalAction.h  FTMoveToAction.cpp  FTMoveToAction.h  FTRepeatAction.cpp  FTRepeatAction.h  FTRotateToAction.cpp  FTRotateToAction.h  IntervalAction.cpp  IntervalAction.h  MoveToAction.cpp  MoveToAction.h  RepeatAction.cpp  RepeatAction.h  RotateToAction.cpp  RotateToAction.h
Source/Rendering/BoundingShape/: BoundingCuboid.cpp  BoundingCuboid.h  BoundingEllipsoid.cpp  BoundingEllipsoid.h  BoundingShape.cpp  BoundingShape.h  BoundingShapeWrapper.cpp  BoundingShapeWrapper.h  CMakeLists.txt  CompoundBoundingShape.cpp  CompoundBoundingShape.h  FTBoundingCuboid.cpp  FTBoundingCuboid.h  FTBoundingEllipsoid.cpp  FTBoundingEllipsoid.h  FTBoundingShape.cpp  FTBoundingShape.h  FTBoundingShapeWrapper.cpp  FTBoundingShapeWrapper.h  FTCompoundBoundingShape.cpp  FTCompoundBoundingShape.h
Source/Rendering/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  CameraFPS.cpp  CameraFPS.h  FTCamera.cpp  FTCamera.h  FTCamera2D.cpp  FTCamera2D.h  FTCamera3D.cpp  FTCamera3D.h  FTCameraFPS.cpp  FTCameraFPS.h  FTRaycast.h  Raycast.h
Source/Rendering/Lighting/: CMakeLists.txt  LightManager.h
Source/Rendering/Material/: CMakeLists.txt  FTMaterial.h  FTMaterialCache.cpp  FTMaterialCache.h  Material.h  MaterialCache.cpp  MaterialCache.h
Source/Rendering/Mesh/: CMakeLists.txt  FTIndexedMesh.h  FTIndexedTexturedMesh.h  FTLightingMesh.h  FTMesh.h  FTTexturedMesh.h  FTVertex.h  IndexedMesh.h  LightingMesh.h  Mesh.h  Vertex.h
Source/Rendering/Primitives/: CMakeLists.txt  CircleBorderSprite.cpp  CircleBorderSprite.h  CircleSprite.cpp  CircleSprite.h  Cube.cpp  Cube.h  Cuboid.cpp  Cuboid.h  FTCircleBorderSprite.cpp  FTCircleBorderSprite.h  FTCircleSprite.cpp  FTCircleSprite.h  FTCube.cpp  FTCube.h  FTCuboid.cpp  FTCuboid.h  FTLine.cpp  FTLine.h  FTPlane.cpp  FTPlane.h  FTPolygon.cpp  FTPolygon.h  FTPolygonBorderSprite.cpp  FTPolygonBorderSprite.h  FTTexturedPlane.cpp  FTTexturedPlane.h  Line.cpp  Line.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  TexturedPlane.cpp  TexturedPlane.h
Source/Rendering/Scene/: CMakeLists.txt  FTDrawableNode.h  FTLayoutNode.h  FTNode.cpp  FTNode.h  FTScene.h  FTShaderNode.h  FTView.cpp  FTView.h  FTWindowSizeNode.h
Source/Rendering/Shader/: CMakeLists.txt  CircleBorderShaderProgram.cpp  CircleBorderShaderProgram.h  CircleShaderProgram.cpp  CircleShaderProgram.h  FTCircleBorderShaderProgram.cpp  FTCircleBorderShaderProgram.h  FTCircleShaderProgram.cpp  FTCircleShaderProgram.h  FTFontShader.cpp  FTFontShader.h  FTShaderCache.cpp  FTShaderCache.h  FTShaderProgram.h  FTVertexColorShaderProgram.cpp  FTVertexColorShaderProgram.h  FTVertexShaderProgram.cpp  FTVertexShaderProgram.h  FTVertexShaderProgramColor.cpp  FTVertexShaderProgramColor.h  FTVertexShaderProgramLighting.cpp  FTVertexShaderProgramLighting.h  FTVertexTextureShaderProgram.cpp  FTVertexTextureShaderProgram.h  FontShader.cpp  FontShader.h  ShaderCache.cpp  ShaderCache.h  ShaderProgram.h  VertexColorShaderProgram.cpp  VertexColorShaderProgram.h  VertexShaderProgram.cpp  (+7 more)
Source/Util/: CMakeLists.txt  FTAlignedData.h  FTAssert.h  FTCircularBuffer.h  FTFileManager.cpp  FTFileManager.h  FTInputManager.cpp  FTInputManager.h  FTLog.cpp  FTLog.h  FTMath.h  FTRect.h  FTStringUtils.cpp  FTStringUtils.h  FTTemplateUtils.h  FTTimer.h  FileManager.h  Math.h  Rect.h  StringUtils.cpp  StringUtils.h  Timer.h
Tests/: CMakeLists.txt
Tests/Resources/: Vera.ftfont
Tests/Source/: CMakeLists.txt  main.cpp
Tests/glfwmock/: CMakeLists.txt  glfwmock.cpp  glfwmock.h
(+176 files in other folders)
